tests/spec/format/snapshots/doc_comment_on_value_enum_variant.snap
---
source: tests/spec/format/mod.rs
description: "input: pub enum E: int {\n  /// Doc for A\n  A = 1,\n  /// Doc for B\n  B = 2,\n}"
---
pub enum E: int {
  /// Doc for A
  A = 1,
  /// Doc for B
  B = 2,
}
