tests/spec/format/snapshots/format_raw_string_multiline_roundtrip.snap
---
source: tests/spec/format/mod.rs
assertion_line: 1374
description: "input: fn test() { let s = r\"a\nb\"; foo(s) }"
---
fn test() {
  let s = r"a
b"
  foo(s)
}
