tests/spec/format/snapshots/format_string_multiline_roundtrip.snap
---
source: tests/spec/format/mod.rs
assertion_line: 1369
description: "input: fn test() { let s = \"a\nb\"; foo(s) }"
---
fn test() {
  let s = "a
b"
  foo(s)
}
