tests/spec/format/snapshots/method_chain_comment_before_single_segment.snap
---
source: tests/spec/format/mod.rs
assertion_line: 1329
description: "input: fn test() { let foo = [5, 5, 5] // .map(|x| x * 2)\n// .filter(|x| x % 2 == 0)\n.fold(0, |acc, x| acc + x) }"
---
fn test() {
  let foo = [5, 5, 5]
    // .map(|x| x * 2)
    // .filter(|x| x % 2 == 0)
    .fold(0, |acc, x| acc + x)
}
