tests/spec/format/snapshots/method_chain_comment_inside_receiver_slice.snap
---
source: tests/spec/format/mod.rs
assertion_line: 1336
description: "input: fn test() { [\"Lilian\", // comment\n\"Lisette\", // comment\n\"Lisa\"].length() }"
---
fn test() {
  [
    "Lilian",
    // comment
    "Lisette",
    // comment
    "Lisa",
  ].length()
}
