tests/spec/format/snapshots/raw_string_multiline_roundtrip.snap
---
source: tests/spec/format/mod.rs
assertion_line: 1369
description: "input: fn test() {\n  let sql = r\"\n    SELECT foo FROM bar\n    WHERE id = 100\n  \"\n}"
---
fn test() {
  let sql = r"
    SELECT foo FROM bar
    WHERE id = 100
  "
}
